[gd_scene load_steps=7 format=3 uid="uid://13k8jq8t4d6v"]

[ext_resource type="Script" path="res://scenes/select_element.gd" id="1_bilow"]
[ext_resource type="FontFile" uid="uid://c6pr7yv4foly1" path="res://PeaberryBase.ttf" id="1_olbky"]

[sub_resource type="LabelSettings" id="LabelSettings_s4meq"]
font = ExtResource("1_olbky")
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_p1t35"]
font_size = 6

[sub_resource type="LabelSettings" id="LabelSettings_vcxuk"]
font_size = 6

[sub_resource type="LabelSettings" id="LabelSettings_kab25"]
font_size = 6

[node name="SelectElement" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bilow")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 13.0
offset_bottom = 44.0
grow_horizontal = 2
text = "Select Your Element"
label_settings = SubResource("LabelSettings_s4meq")
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -12.0
offset_right = 35.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="IceElement" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.980392, 0.992157, 1)
text = "Ice"
label_settings = SubResource("LabelSettings_p1t35")
horizontal_alignment = 1

[node name="FireElement" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fire"
label_settings = SubResource("LabelSettings_vcxuk")
horizontal_alignment = 1

[node name="WindElement" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Wind"
label_settings = SubResource("LabelSettings_kab25")
horizontal_alignment = 1
